--- a/styles.css
+++ b/styles.css
@@ -69,15 +69,16 @@ header{
     position: absolute;
     right: 5rem;
     top:60px;
-    height: 0;
+    max-height: 0;
     width: 200px;
     background: rgba(138, 136, 136, 0.1);
     border-radius: 12px;
     overflow: hidden;
+    transition: max-height 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
 .dropdown-menu.open{
-    height:auto;
+    max-height:240px;
 }
 
 .dropdown-menu li{
@@ -99,3 +100,11 @@ header{
         display: block;
     }
 }
+
+@media (min-width:992px){
+    .dropdown-menu.open{
+        display: none;
+    }
+}
+
+
